@@ -108,7 +108,7 @@ def main(
         config.read(os.path.abspath(os.path.expanduser(config_file)),
                     limit=int, soft_mem_limit=int, hard_mem_limit=int,
                     port=int, serialize_jobs=valid.boolean,
-                    strict=valid.boolean, code=exec, slowdown_rate=float)
+                    strict=valid.boolean, code=exec)
 
     if no_distribute:
         os.environ['OQ_DISTRIBUTE'] = 'no'
