@@ -78,4 +78,3 @@ mosaic_dir =
 
 [performance]
 pointsource_distance = 1000
-slowdown_rate = 0
