@@ -1,3 +1,7 @@
+  [Michele Simionato]
+  * Solved hanging of classical calculations due to large packets
+    exceeding the capacity of zmq
+
   [Marco Pagani, Michele Simionato]
   * Added support for the "direct" method in MRD calculations
 
